# xStage

./: .gitignore  ADDED_FEATURES.md  CHANGELOG.md  CI_FIXES.md  CODE_OF_CONDUCT.md  CODE_ORGANIZATION_PLAN.md  COMPETITIVE_ANALYSIS.md  COMPLETE_FEATURE_LIST.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_CONSOLIDATION.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_IDEAS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUTURE_FEATURES.md  HIGH_PRIORITY_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIUM_PRIORITY_IMPLEMENTATION.md  MIGRATION_NOTES.md  NEXT_STEPS.md  OPTIONAL_PLUGINS.md  QUICK_START_GUIDE.md  README.md  STRATEGIC_IMPROVEMENTS.md  USD_FEATURE_ANALYSIS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  ui_mockup.html
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: BEST_MATERIAL_PRACTICES.md  HOUDINI_NUKE_COMPATIBILITY.md  adobe-auto-install.md  adobe-plugin-formats.md  alembic-improvements.md  materialx-support.md  platform-support.md  rotation-guide.md  xmaterial-support.md
scripts/: install.sh  install_adobe_plugins.sh
src/xstage/: __init__.py  adobe_converter.py  animation_curve_ui.py  animation_curves.py  camera_manager_ui.py  collection_editor_ui.py  color_space.py  converter_ui.py  hydra_viewport.py  layer_composition.py  layer_composition_ui.py  material_editor_ui.py  materials.py  multi_viewport.py  namespace_editing.py  openexec_support.py  openexec_ui.py  pipeline_integration.py  prim_selection_ui.py  render_settings_editor_ui.py  scene_comparison.py  scene_comparison_ui.py  scene_search_ui.py  stage_variables.py  stage_variables_ui.py  usd_lux_support.py  validation.py  viewer.py  viewport.py
src/xstage/converters/: __init__.py  adobe_converter.py  converter.py  material_creator.py  material_validator.py
src/xstage/core/: __init__.py  viewer.py  viewport.py
src/xstage/managers/: __init__.py  aov_manager.py  batch_operations.py  camera_manager.py  collections.py  coordinate_systems.py  instancing_manager.py  lod_manager.py  payloads.py  prim_selection.py  scene_search.py  selection_sets.py  undo_redo.py  variants.py
src/xstage/rendering/: __init__.py
src/xstage/ui/: __init__.py
src/xstage/ui/editors/: __init__.py  animation_curve_ui.py  annotations_ui.py  aov_visualization_ui.py  camera_manager_ui.py  collection_editor_ui.py  converter_ui.py  layer_composition_ui.py  material_editor_ui.py  openexec_ui.py  prim_selection_ui.py  primvar_editor_ui.py  scene_comparison_ui.py  scene_search_ui.py  stage_variables_ui.py
src/xstage/ui/widgets/: __init__.py  material_preview.py  texture_preview.py
src/xstage/utils/: __init__.py  adobe_plugin_installer.py  annotations.py  bookmarks.py  cache_manager.py  help_system.py  light_visualization.py  performance_profiler.py  progress_manager.py  recent_files.py  theme_manager.py  viewport_overlay.py
tests/: test_converters.py  test_managers.py  test_utils.py  test_viewer.py
