[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xstage"
version = "0.1.0"
description = "Professional USD viewer with pipeline integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "NOX VFX", email = "pipeline@nox-vfx.com"}
]
keywords = ["usd", "openusd", "vfx", "pipeline", "viewer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/xstage-pipeline/xstage"
Documentation = "https://xstage-pipeline.github.io"
Repository = "https://github.com/xstage-pipeline/xstage"
Issues = "https://github.com/xstage-pipeline/xstage/issues"

[project.scripts]
xstage = "xstage.core.viewer:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pylint]
max-line-length = 100